feat(belege-pdf): Firmenlogo + Firmeninformationen im Steuerberater-PDF (#58)
Der Monats-Steuerberater-Export laed das echte Firmenlogo jetzt aus
dem im FirmaEditor gepflegten uploads/firma/logo/<logoDateiname>
statt der hardcodierten Static-Resource. Pfad-Traversal-Schutz
zweistufig (Blacklist + Path.normalize/startsWith), Fallback auf
/static/firmenlogo_icon.png bzw. Briefkopf-Skip wenn weder Logo
noch Firma vorhanden.

Neuer Briefkopf in 2-Spalten-Layout: Logo links, rechts ausgerichtete
Stammdaten (Firmenname, Adresse, Telefon-/Email-/Web-Zeile,
Steuernummer/USt-IdNr). Damit sieht der Steuerberater auf einen
Blick, von welcher Firma der Export stammt.

Temp-PDF folgt jetzt upload.path statt hardcodiertem "uploads".

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>